# MegaPrayer-oscled

./: Makefile.am  README  README.md  TODO.org  configure.ac  env.sh
build-armel-rpi/: Makefile
debian/: changelog  control  rules
python/: bounce_touchosc_layout.touchosc  demo-braindead-trigger.bat  demo-braindead-trigger.sh  demo-osc-calls.sh  demo-script.py  mp.py  requirements.txt  rosary1.touchosc  server.py  supervisord.conf.txt  testMP.py  testTrigger.py  tunesd.py
python/mp/: __init__.py  color.py  dispatcher_mapper.py  effect_list.py  rosary.py
python/mp/effects/: .effect.py.swp  __init__.py  america.py  bin.py  bin_demo.py  bounce.py  burn_it_all.py  casino.py  cop_lights.py  cross_idle.py  effect.py  effect_list_demo.py  fire_spreading.py  firework.py  idle.py  launcher.py  level.py  looper.py  ramp.py  random_fill.py  revelation.py  risefall.py  roulette.py  set_color.py  shoot.py  shooter.py  sine_wave.py  soft_edges_glow.py  sparkle.py  stigmata.py  strobe.py  sweep.py  test.py  throb.py  trigger_hijack_demo.py  vibration_fixed.py  wheel.py
python/mp/triggers/: __init__.py  left_nail.py  low_power_mode.py  nails.py  some_other_thing.py  test.py  trigger.py
python/pympsim/: OSC-server.py.bak  OSCserver.py  OSCserver.py.bak  pympsim.py  simulator.py  simulator.py.bak
python/pympsim/experimentations/: animation-example.py  animation-example.py.bak  example-OSC-client.py  example-OSC-server.py  example-pygame.py.bak  multiproc-queue.py
python/time_server/: time_server.py
python/time_server/static/: index.html
src/: CircularBuffer.cpp  CircularBuffer.h  IPlatformSerial.h  Makefile.am  Makefile.in  OSCLedConfig.cpp  OSCLedConfig.hpp  OSCServer.cpp  OSCServer.h  PlatformSerialFactory.h  Test_CircularBuffer.cpp  Test_CircularBuffer.h  dmx.json  main.cpp  oscled-gtksim.json  oscled-main.cpp  oscled.json  oscledconfig-main.cpp  runTest.cpp  swrite-main.cpp
src/chip/: Makefile.am  PlatformSerial.cpp  PlatformSerial.h  PlatformSerialFactory.cpp  cscope.out  event_gpio.h  names.h  test.c
src/dmx/: DMX.cpp  DMX.hpp  DMXSerial.hpp  Makefile.am  Makefile.in  PlatformSerialFactory.cpp  building.txt
src/gtksim/: GtkSim.cpp  GtkSim.hpp  Makefile.am  Makefile.in  PlatformSerialFactory.cpp
src/gtksim/autom4te.cache/: requests
src/opi/: Makefile  Makefile.am  Makefile.in  PlatformSerial.cpp  PlatformSerial.h  PlatformSerialFactory.cpp  common.h  gpio_lib.c  gpio_lib.h  read-station-id.c  test.c
src/rpi/: Makefile  Makefile.am  Makefile.in  PiGPIOSerial.cpp  PiGPIOSerial.h  PiGPIOSerialMUX.cpp  PiGPIOSerialMUX.h  PlatformSerialFactory.cpp  PlatformSerialFactory.cpp.SAVE  test.c
src/skeleton/: Makefile  Makefile.am  Makefile.in  PlatformSerial.cpp  PlatformSerial.h  PlatformSerialFactory.cpp
